--- a/shimmyShake.html
+++ b/shimmyShake.html
@@ -1,10 +1,10 @@
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSojyksmQBDHTgZAfLWUWkt4R-aVymBdyCgZXoUsX5WEglxZcZk">
 
-<h1> Hello Gorgeous, {{}}</h1>
-<p>My favorite color is {{display}} </p>
-<p>My favorite food is {{display}} </p>
-<p> I {{display}} my apartment</p>
-<p> Kelly is  {{display}}  gorgeous </p>
-<p>Roses are Red Violets are {{display}} </p>
-<p>Word up {{display}} </p>
+<h1> Hello Gorgeous, {{display[0]}}</h1>
+<p>My favorite color is {{display[1]}} </p>
+<p>My favorite food is {{display[2]}} </p>
+<p> I {{display[3]}} my apartment</p>
+<p> Kelly is  {{display[4]}}  gorgeous </p>
+<p>Roses are Red Violets are {{display[5]}} </p>
+<p>Word up {{display[6]}} </p>
 >
