--- a/externalData.html
+++ b/externalData.html
@@ -1,1 +1,9 @@
-<h1> Hello Gorgous, {{}}</h1>
+<h1> Hello Gorgous, {{myData}}</h1>
+
+
+<div ng-controller="externalData">
+    <ul >
+      <li>{{myData}}</li>
+    </ul>
+</div> 
+
