--- a/index.html
+++ b/index.html
@@ -3,20 +3,16 @@
 
 <script src="lib/angular.min.js"></script>
 <script src="lib/angular-route.js"></script>
+<link rel="stylesheet" type="text/css" href="styles.css"> 
 	<title>Lab 15</title>
 	
 </head>
-<body ng-app='shimmy'>
+<body ng-app='dance'>
 {{1+1}}
 <a href="#/shimmySparkle">Sparkle</a>
 <a href="#/shimmyShake">Shake</a>
 <a href="#/externalData">Data</a>
 
-<!---<div ng-controller="externalData">
-    <ul ng-repeat="data in myData">
-      <li>{{data}}</li>
-    </ul>
-  </div> -->
 
 <ng-view></ng-view>
 
@@ -27,10 +23,11 @@
 
 <!-- <script type="text/javascript" src="lib/jquery-1.11.1.js"></script> -->
 
-<script type="text/javascript" src="script.js"></script>
+
 <script type="text/javascript" src="service.js"></script>
 <script type="text/javascript" src="sparkle.js"></script>
 <script type="text/javascript" src="shake.js"></script>
 <script type="text/javascript" src="exData.js"></script>
+
 </body>
 </html>
